Fix most viewed articles card on mobile

--- a/resources/frontend/sass/themes/_post-card.scss
+++ b/resources/frontend/sass/themes/_post-card.scss
@@ -49,7 +49,7 @@
     }
 
     #{$this}__info {
-      max-width: 60%;
+      width: 60%;
       padding: 1.5rem;
     }
   }
